# spatial-codecs

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/c/: spatial_codecs_interops.h
bindings/csharp/: SpatialCodecsInterop.cs
configs/: bench.toml
docs/: design.md  ffi.md
examples/c/: gsplat_roundtrip.c  point_roundtrip.c
examples/cpp/: gsplat_roundtrip.cpp  point_roundtrip.cpp
examples/csharp/: Program.cs  SpatialCodecsExamples.csproj
src/: bindings_generation.rs  decoder.rs  encoder.rs  error.rs  ffi.rs  lib.rs  main.rs
src/bench/: config.rs  io.rs  mod.rs  progress.rs  report.rs  runner.rs  serialize.rs  timing.rs
src/bench/metrics/: color.rs  geometry.rs  mod.rs  nn.rs  normals.rs  ref_cache.rs
src/codecs/: mod.rs
src/codecs/bitcode/: decoder.rs  encoder.rs  mod.rs
src/codecs/draco/: decoder.rs  encoder.rs  mod.rs
src/codecs/gsplat16/: decoder.rs  encoder.rs  mod.rs  types.rs
src/codecs/gzip/: decoder.rs  encoder.rs  mod.rs
src/codecs/lz4/: decoder.rs  encoder.rs  mod.rs
src/codecs/openzl/: decoder.rs  encoder.rs  mod.rs
src/codecs/ply/: ascii.rs  binary.rs  decoder.rs  encoder.rs  header.rs  mod.rs  types.rs
src/codecs/quantize/: bitio.rs  decoder.rs  delta.rs  encoder.rs  header.rs  mod.rs  palette.rs  types.rs
src/codecs/snappy/: decoder.rs  encoder.rs  mod.rs
src/codecs/sogp/: decoder.rs  encoder.rs  mod.rs  types.rs
src/codecs/tmf/: decoder.rs  encoder.rs  mod.rs
src/codecs/zstd/: decoder.rs  encoder.rs  mod.rs
src/utils/: byte_cursor.rs  mod.rs  slice_convert.rs
